feat(config): update application.yml and SecurityFilter for OAuth2